kube/media/tdarr-server/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server-lan
  namespace: media
  labels:
    app.kubernetes.io/name: tdarr-server
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.228
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: tdarr-server
  ports:
  - port: 8265
    targetPort: http
    protocol: TCP
    name: http
  - port: 8266
    targetPort: server
    protocol: TCP
    name: server
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server
  namespace: media
  labels:
    app.kubernetes.io/name: tdarr-server
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8265
    targetPort: http
    protocol: TCP
    name: http
  - port: 8266
    targetPort: server
    protocol: TCP
    name: server
  selector:
    app.kubernetes.io/name: tdarr-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr-server
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: tdarr-server
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - tdarr.matthew-stratton.me
    secretName: tdarr-server-tls
  rules:
  - host: tdarr.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: tdarr-server
            port:
              number: 8265
        path: /
        pathType: Prefix
      - backend:
          service:
            name: tdarr-server
            port:
              number: 8266
        path: /server
        pathType: Prefix
